# recommend_movie

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
docker/: Dockerfile
src/: main.py
src/dataset/: shema.py
src/jobs/: retrieve.py  train.py
src/models/: association_recommender.py  base_recommender.py  dataset.py  eval.py  nmf_recommender.py  popularity_recommender.py  random_recommender.py  recommend_result.py
