[tool.poetry]
name = "recommend-movie"
version = "0.1.0"
description = ""
authors = ["ac2393921 <ac2393921@gmail.com>"]
readme = "README.md"
packages = [{include = "recommend_movie"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
