[tool.poetry]
name = "recommend-movie"
version = "0.1.0"
description = ""
authors = ["ac2393921 <ac2393921@gmail.com>"]
readme = "README.md"
packages = [{include = "recommend_movie"}]

[tool.poetry.dependencies]
python = "^3.9"
numba = "0.56"
mlflow = "^2.1.1"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
